--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,23 @@
-/* You can add global styles to this file, and also import other style files */
+body, html{
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  box-sizing: border-box;
+  background-color: #354152;
+  margin: auto;
+}
+
+app-root {
+  display: block;
+  margin: 0;
+  height: 100%;
+  width: 100%;
+  box-sizing: border-box;
+  background-color: #354152;
+  margin: auto;
+
+}
+
+* {
+  box-sizing: border-box;
+}
