--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,8 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import "~@fortawesome/fontawesome-free/css/all.css";
+
 body, html{
   width: 100%;
   height: 100%;
