--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,17 +8,17 @@
         <h2>Login</h2>
   
   
-        <form action="" method="post" class="form">
+        <form [formGroup]="loginForm" (ngSubmit)="onSubmit($event)" action="" method="post" class="form">
             <div class="input-container">
-                <input type="email" placeholder="info@mailaddress.com">
+                <input formControlName="email" type="email" placeholder="info@mailaddress.com">
             </div>
   
             <div class="input-container">
-                <input type="password" placeholder="••••••••••••">
+                <input formControlName="password" type="password" placeholder="••••••••••••">
             </div>
   
             <div class="input-container">
-                <input type="submit" value="Login">
+                <input [disabled]="loginForm.invalid" type="submit" value="Login">
             </div>
         </form>
     </div>
