The users are implemented in the table with his information

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -17,9 +17,10 @@
         </thead>
 
         <tbody>
-            <tr>
-                <td>Username</td>
-                <td>Email</td>
+            <!-- Itera sobre los usuarios -->
+            <tr *ngFor="let user of users">
+                <td>{{ user.username }}</td>
+                <td>{{ user.email }}</td>
                 <td class="actions-cell">
                     <button class="edit-link" (click)="openEditUserModal()">
                         Edit
