--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -22,11 +22,11 @@
             </div>
             <!-- Modal body -->
             <div class="p-4 md:p-5">
-                <form class="space-y-4" action="#">
+                <form [formGroup]="userForm" (ngSubmit)="onSubmit($event)" class="space-y-4">
                     <div>
                         <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your
                             email</label>
-                        <input type="email" name="email" id="email"
+                        <input formControlName="email" type="email" id="email"
                             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
                             placeholder="name@domain.com" />
                     </div>
@@ -34,7 +34,7 @@
                     <div>
                         <label for="username" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your
                             username</label>
-                        <input type="text" name="username" id="username"
+                        <input formControlName="username" type="text" id="username"
                             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
                             placeholder="username" />
                     </div>
@@ -42,7 +42,7 @@
                     <div>
                         <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your
                             password</label>
-                        <input type="password" name="password" id="password" placeholder="••••••••"
+                        <input formControlName="password" type="password" id="password" placeholder="••••••••"
                             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
                              />
                     </div>
