Modal created to modify existing data as selected, and its functionality

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -22,7 +22,7 @@
                 <td>{{ user.username }}</td>
                 <td>{{ user.email }}</td>
                 <td class="actions-cell">
-                    <button class="edit-link" (click)="openEditUserModal()">
+                    <button class="edit-link" (click)="openEditUserModal(user)">
                         Edit
                     </button>
 
@@ -36,3 +36,4 @@
 </section>
 
 <app-modal></app-modal>
+<app-update-modal></app-update-modal>
