--- a/src/app/update-modal/update-modal.component.html
+++ b/src/app/update-modal/update-modal.component.html
@@ -1,3 +1,4 @@
+<!-- Main modal -->
 <div *ngIf="isVisible" id="authentication-modal" tabindex="-1" aria-hidden="true"
     class="fixed top-0 right-0 left-0 z-50 flex justify-center items-center w-full h-full">
     <div class="relative p-4 w-full max-w-md max-h-full">
@@ -6,7 +7,7 @@
             <!-- Modal header -->
             <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600">
                 <h3 class="text-xl font-semibold text-gray-900 dark:text-white">
-                    Create user
+                    Complete the information to edit
                 </h3>
                 <button type="button"
                     class="end-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
@@ -21,7 +22,7 @@
             </div>
             <!-- Modal body -->
             <div class="p-4 md:p-5">
-                <form [formGroup]="userForm" (ngSubmit)="onSubmit($event)" class="space-y-4">
+                <form [formGroup]="userFormEdit" (ngSubmit)="onSubmit($event)" class="space-y-4">
                     <div>
                         <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your
                             email</label>
@@ -48,7 +49,7 @@
 
                     <button type="submit"
                         class="w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-                        Complete
+                        Complete edit
                     </button>
                 </form>
             </div>
