--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -26,7 +26,7 @@
                         Edit
                     </button>
 
-                    <button class="delete-btn">
+                    <button class="delete-btn" (click)="deleteUser(user._id)">
                         Delete
                     </button>
                 </td>
