The modal error to show a error when you try login with the wrong info, was created and implemented

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -62,4 +62,21 @@
         }
       }
     }
+
+    .register{
+      color: white;
+
+      span{
+        text-decoration: underline;
+        cursor: pointer;
+        font-weight: bold;
+        transition: 0.5s ease;
+
+        &:hover{
+          color: #8ceabb;
+          transition: 0.5s ease;
+
+        }
+      }
+    }
   }
