--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,27 +1,29 @@
 <section class="container">
-    <div class="login-container">
-      <div class="logo">
-        <img src="../assets/img/logo.png" alt="">
-      </div>
-  
-      <h2>Login</h2>
-  
-      <form [formGroup]="loginForm" (ngSubmit)="onSubmit($event)" action="" method="post" class="form">
-        <div class="input-container">
-          <input formControlName="email" type="email" placeholder="info@mailaddress.com">
-        </div>
-  
-        <div class="input-container">
-          <input formControlName="password" type="password" placeholder="••••••••••••">
-        </div>
-  
-        <div class="input-container">
-          <input [disabled]="loginForm.invalid" type="submit" value="Login">
-        </div>
-      </form>
+  <div class="login-container">
+    <div class="logo">
+      <img src="../assets/img/logo.png" alt="">
     </div>
-  
-    <!-- Modal de error -->
-    <app-modal-error *ngIf="showErrorModal" (close)="closeErrorModal()"></app-modal-error>
-  </section>
-  
+
+    <h2>Login</h2>
+
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit($event)" action="" method="post" class="form">
+      <div class="input-container">
+        <input formControlName="email" type="email" placeholder="info@mailaddress.com">
+      </div>
+
+      <div class="input-container">
+        <input formControlName="password" type="password" placeholder="••••••••••••">
+      </div>
+
+      <div class="input-container">
+        <input [disabled]="loginForm.invalid" type="submit" value="Login">
+      </div>
+
+      <p class="register">Don't have an account? <span>Register now</span></p>
+    </form>
+  </div>
+
+  <!-- Modal de error -->
+  <app-modal-error *ngIf="showErrorModal" (close)="closeErrorModal()"></app-modal-error>
+</section>
+
